<resources>
    <string name="app_name">Vault</string>
    <string name="addviewbtn">Add/View Games</string>
    <string name="statsbtn">Overall Stats</string>
    <string name="score_entry">Score</string>
    <string name="submit_score_btn">Submit</string>
    <string name="date_entry">Date (YYYY/MM/DD)</string>
    <string name="logodescription">Logo for the app menu</string>
    <string name="display">%s %d %d</string>
    <string name="level">Level Start</string>
    <string name="sortName">Sort</string>
    <string name="high_score">High Score: %d</string>
    <string name="high_score_NA">High Score: N/A</string>
    <string name="average_score">Average Score: %s</string>
    <string name="average_score_NA">Average Score: N/A</string>
    <string name="number_of_scores">Number of Scores: %d</string>
    <string name="median_score">Median Score: %s</string>
    <string name="median_score_NA">Median Score: N/A</string>
    <string name="date">Date</string>
    <string name="score">Score</string>
    <string name="level_name">Level</string>
    <string name="delete_all">Delete All Scores</string>
    <string name="verify">Are you sure you want to delete ALL scores? This CANNOT be undone!</string>
    <string name="edit_icon">Edit icon</string>
    <string name="delete_icon">Delete icon</string>
    <string-array name="sort">
        <item>Sort by</item>
        <item>Date</item>
        <item>Score</item>
        <item>Level</item>
    </string-array>
</resources>
